--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -30,6 +30,52 @@
             android:layout_marginTop="10dp" />
 
         <TextView
+            android:id="@+id/textViewSpecialist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Médico ou Especialista"
+            android:textSize="17dp"
+            android:textColor="@android:color/black"
+            tools:visibility="gone" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/spinnerSpecialist"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/custom_border_spinner"
+                tools:visibility="gone" />
+
+            <EditText
+                android:id="@+id/editTextSpecialist"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/custom_border_textedit"
+                tools:visibility="gone" />
+
+            <Button
+                android:id="@+id/buttonAddSpecialist"
+                android:layout_width="40dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorPrimaryDark"
+                android:shadowRadius="5"
+                android:text="+"
+                android:textColor="@android:color/white"
+                tools:visibility="gone" />
+
+        </LinearLayout>
+
+        <TextView
             android:id="@+id/textViewSpecialty"
             android:layout_width="132dp"
             android:layout_height="wrap_content"
