--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,9 +51,10 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
+        android:text="Health Routine"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="69dp"
         android:layout_marginBottom="615dp"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
@@ -61,6 +62,19 @@
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:clickable="true"
+            android:src="@drawable/ic_baseline_account_circle_24"
+            app:backgroundTint="@color/colorPrimary"
+            tools:ignore="MissingConstraints" />
+    </android.support.v7.widget.Toolbar>
+
+
+
 
 </android.support.constraint.ConstraintLayout>
