--- a/app/src/main/res/layout/fragment_historic.xml
+++ b/app/src/main/res/layout/fragment_historic.xml
@@ -40,7 +40,7 @@
             android:text="FILTRAR"
             android:textColor="@android:color/white"
             android:background="@color/colorPrimaryDark"
-            android:layout_margin="10dp"/>
+            android:layout_marginTop="50dp"/>
 
         </LinearLayout>
 
