--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -11,30 +11,34 @@
         android:id="@+id/line1"
         android:orientation="horizontal">
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/imgBack"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_baseline_arrow_back"
-            android:layout_alignParentLeft="true"/>
-        
-        <TextView
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text= "Perfil"
-            android:textSize="16dp"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"
-            android:gravity="center"/>
+            android:layout_alignParentLeft="true"
+            android:background="@color/colorPrimary"
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="-35dp"
+            android:gravity="center"
+            android:text="Perfil"
+            android:textColor="#FFFFFF"
+            android:textSize="22dp"
+            android:textStyle="bold" />
+
+        <!--TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Sair"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="#FFFFFF"
             android:layout_alignParentRight="true"
             android:textStyle="normal"
-            android:textSize="15dp"/>
+            android:textSize="15dp"/-->
 
     </LinearLayout>
 
