--- a/app/src/main/res/layout/fragment_future.xml
+++ b/app/src/main/res/layout/fragment_future.xml
@@ -6,9 +6,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/buttonProfile"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_gravity="bottom"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="210dp"
+        android:src="@drawable/ic_baseline_account_circle_24"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/buttonExport"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_gravity="bottom"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="140dp"
+        android:src="@drawable/ic_baseline_exit_to_app_24"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/buttonAdd"
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_gravity="bottom"
@@ -40,7 +64,7 @@
             android:text="FILTRAR"
             android:textColor="@android:color/white"
             android:background="@color/colorPrimaryDark"
-            android:layout_marginTop="50dp"/>
+            android:layout_marginTop="50dp"
             android:layout_margin="10dp"/>
         </LinearLayout>
 
